# cursorrules-architect

./: .cursorignore  .cursorrules  .gitignore  .pre-commit-config.yaml  BETTER_REPLACEMENTS.md  CHANGELOG.md  CLI_README.md  CONTEXT_ENGINEERING_INTEGRATION_GUIDE.md  CONTRIBUTING.md  CRITICAL_FIXES_COMPLETED.md  DOCUMENTATION_COMPLETE.md  ENHANCEMENT_OBJECTIVES.md  INTEGRATION_BLIND_SPOTS_ANALYSIS.md  Makefile  PRD.md  README.md  analysis_memory.db  analysis_memory.json  codebase_analysis.md  codebase_review_and_improvements.md  cursorrules-architect_analysis.txt  demo_blueprint.py  demo_context_engineering_integration.py  indydevdan-architect-alignment-matrix.md  main.py  main_enhanced.py  modern_cli.py  monitoring-cursorrules.py  project_extractor.py  pyproject.toml  requirements.txt  setup.sh  test_critical_fixes.py
.bmad-core/: core-config.yaml  install-manifest.yaml
.cursor/rules/: claude-3-7-sonnet-reasoning.mdc  deepseek-reasoner.mdc  final-analysis-docs.mdc  google-gemini-api-v2.mdc  phase-1-docs.mdc  phase-2-docs.mdc  phase-3-docs.mdc  phase-5-docs.mdc
PROMPTS/: CLAUDE.md  README.md  TREE_STRUCTURE.md
agents/: dependency_analyzer_agent.py  project_architect_agent.py
architects/: project_doc_generator.py
cli/commands/: __init__.py  generate.py  list_tools.py  validate.py
cli/formatters/: __init__.py  claude.py  cline.py  roo.py  windsurf.py
cli/interactive/: __init__.py
config/: __init__.py  agents.py
config/prompts/: __init__.py  final_analysis_prompt.py  phase_1_prompts.py  phase_2_prompts.py  phase_5_prompts.py
core/: __init__.py
core/agents/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  openai.py
core/analysis/: __init__.py  enhanced_phase_1.py  final_analysis.py  phase_1.py  phase_2.py  phase_3.py  phase_4.py  phase_5.py
core/analysis_enhancement/: __init__.py  analysis_enhancer.py  prompt_optimizer.py
core/blueprint/: __init__.py  generator.py  integration.py
core/context/: analysis_context_integration.py  context_field_engine.py
core/context_engineering/: __init__.py  cognitive_tools.py  field_dynamics.py  foundations.py  integration_manager.py  patterns.py
core/memory/: __init__.py  analysis_memory_integration.py  memory_agent.py
core/protocol/: phase2_protocol_integration.py
core/types/: __init__.py  agent_config.py
docs/: ARCHITECTURE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_NEW.md  DETAILED_GUIDE.md  DOCS_README.md  FALLBACK_IMPLEMENTATION.md  MEMORY_SYSTEM_REMOVAL_SUMMARY.md  PROJECT_SCOPE.md  README.md  README_NEW.md  README_UPDATE_SUMMARY.md  REORGANIZATION_SUMMARY.md  directory_structure.md
docs/configuration/: configuration-guide.md
docs/context-engineering/: overview.md
docs/deployment/: troubleshooting.md
docs/getting-started/: quick-start.md
phases_output/: enhanced_prompt_example.md  phase1_blueprint.json  phase1_blueprint.md  phase1_blueprint.yaml  phase2_blueprint.json  phase2_blueprint.md  phase2_blueprint.yaml  phase3_blueprint.json  phase3_blueprint.md  phase3_blueprint.yaml  phase4_blueprint.json  phase4_blueprint.md  phase4_blueprint.yaml  phase5_blueprint.json  phase5_blueprint.md  phase5_blueprint.yaml
scripts/: Makefile  fix_imports.py  migrate_to_new_structure.py
src/cursorrules_architect/: __init__.py  __main__.py  demo_blueprint.py  main.py  modern_cli.py
templates/: service_templates.yml
templates/auth/: auth-js-component.yml  clerk.yml  firebase-auth.yml  index.yml  kinde.yml  supabase-auth.yml
templates/base/: next-app-base.yml
tests/: __init__.py  conftest.py  phase3_diagnostic_results.json  phase_3_diagnostic_test.py  run_all_tests.py  run_phase3_diagnostic.py  test_context_field_engine.py  test_env.py  test_memory_agent.py  test_protocol_engine.py  test_real_project_phase3.py
tests/final_analysis_test/: fa_test_input.json  (+2 more)
utils/: monitoring-cursorrules.py  project_doc_generator.py
(+97 files in other folders)
